@@ -40,3 +40,22 @@ public class CollectionMethodsPreview {
 }
 
 ```
+
+Maven
+
+```xml
+<build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.3</version>
+			<configuration>
+				<source>${maven.compiler.source.version}</source>
+				<target>${maven.compiler.target.version}</target>
+				<compilerArgs>--enable-preview</compilerArgs>
+			</configuration>
+		</plugin>
+	</plugins>
+</build>
+```
